added .map doubledNumbers